--- a/games/player.html
+++ b/games/player.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Msgv3</title>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5358301512554034"
+     crossorigin="anonymous"></script>
   <link href="../style.css" rel="stylesheet" type="text/css" />
   <link href="./cardstyle.css" rel="stylesheet" type="text/css"/>
   <link href="./player.css" rel="stylesheet" type="text/css"/>
